--- a/AddEduApp/templates/accounts/signin.html
+++ b/AddEduApp/templates/accounts/signin.html
@@ -1,11 +1,31 @@
 {% extends 'accounts/based.html' %}
 {% load static %}
 {% block title %} Войти {% endblock %}
+{% block head %} 
+<link rel="stylesheet" href="{% static 'css/kid_entrance.css' %}" />
+{% if role != "student" %}
+    <style>
+        html{
+            background: #7A75FF;
+        }
+        .button-submit-form{
+            background-color: #4B0096;
+        }
+    </style>
+{% endif %}
+{% endblock head%}
+
 {% block content %}
 <div>
-    <form action="#" method="post" class="signup-form">
+    <form action="{% url 'accounts:signin' %}{% if role %}?role={{ role }}{% endif %}" method="post" class="signup-form">
         {% csrf_token %}
+        <input type="hidden" name="teacher_code" value="{{ teacher_code }}">
         <div class="input-fields">
+            <h1 class="entrance-head">Вход</h1>
+            <div class="form-group">
+                {{ form.name }}
+                <div class="text-danger">{{ form.errors.name }}</div>
+            </div>
             <div class="form-group">
                 {{ form.email }}
                 <span class="text-danger">{{ form.errors.email }}</span>
@@ -20,7 +40,11 @@
         </div>
     </form>
     <div>
-        <p class="enter-link">Ты новенький? <a href="{% url 'accounts:signup' %}">Зарегистрироваться</a></p>
+        <p class="enter-link">Ты новенький? <a href="{% url 'accounts:signup' %}?role={{ role }}">Зарегистрироваться</a></p>
+      
     </div>
 </div>
 {% endblock content %}
+
+
+
