--- a/AddEduApp/templates/accounts/signup.html
+++ b/AddEduApp/templates/accounts/signup.html
@@ -3,7 +3,7 @@
 {% block title %} Зарегистрироваться {% endblock %}
 
 {% block head %} 
-<link rel="stylesheet" href="{% static 'css/kid_entrance.css' %}" />
+<link rel="stylesheet" href="{% static 'css/entrance.css' %}" />
 {% if role != "student" %}
 <style>
     html{
