--- a/AddEduApp/templates/accounts/signin.html
+++ b/AddEduApp/templates/accounts/signin.html
@@ -2,7 +2,7 @@
 {% load static %}
 {% block title %} Войти {% endblock %}
 {% block head %} 
-<link rel="stylesheet" href="{% static 'css/kid_entrance.css' %}" />
+<link rel="stylesheet" href="{% static 'css/entrance.css' %}" />
 {% if role != "student" %}
     <style>
         html{
