--- a/AddEduApp/templates/accounts/teacherCode.html
+++ b/AddEduApp/templates/accounts/teacherCode.html
@@ -2,8 +2,7 @@
 {% load static %}
 {% block title %} Войти {% endblock %}
 {% block head %} 
-<link rel="stylesheet" href="{% static 'css/kid_entrance.css' %}" />
-<link rel="stylesheet" href="{% static 'css/staff_entrance.css' %}" />
+<link rel="stylesheet" href="{% static 'css/entrance.css' %}" />
 <style>
     html{
         background: #7A75FF;
