--- a/AddEduApp/templates/accounts/entrance.html
+++ b/AddEduApp/templates/accounts/entrance.html
@@ -2,7 +2,7 @@
 {% load static %}
 {% block title %} Вход {% endblock %}
 {% block head %} 
-<link rel="stylesheet" href="{% static 'css/kid_entrance.css' %}" />
+<link rel="stylesheet" href="{% static 'css/entrance.css' %}" />
 {% endblock head%}
 {% block content %}
 <div>
